--- a/style.css
+++ b/style.css
@@ -136,3 +136,19 @@ footer{
     height: 32px;
     padding-left: 20px;
 }
+.text{
+    display:grid;
+    grid-template-rows: repeat(2,1fr);
+    justify-items: center;
+}
+.color-red{
+    color: red;
+    padding-left: 120px;
+}
+.color-blue{
+    margin-top: 10px;
+    padding-left: 130px;
+    border-radius: 20px;
+    color: white;
+    background-color: royalblue;
+}
